# zk-puzzle-chain

./: .env  Cargo.toml  README.md
src/: core.rs  database.rs  main.rs  miner.rs  rpc.rs  schema.rs  verification.rs
zk-pow/: Cargo.toml
zk-pow/host/: Cargo.toml
zk-pow/host/src/: main.rs
zk-pow/methods/: Cargo.toml
zk-pow/methods/guest/: Cargo.toml
zk-pow/methods/guest/src/: main.rs
