[package]
name = "zk-puzzle-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { version = "1.0.5" }
serde = "1.0"
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
bincode = "1.3.3"
sha2 = "0.10.8"
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
hex = "0.4.3"
